Wed Mar 31 17:59:12 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* tools/static_configurator/Static_Configurator.mpc:

	  Fixed fuzz warnings.

Mon Mar 29 11:00:00 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/CIDLC.vcproj:
        
          Excluded the file RepositoryIdGenerator.cpp from the Release build,
          as it has already been excluded from the Debug build. Thanks to
          Marek Brudka <mbrudka@elka.pw.edu.pl> for reporting the problem.

Sun Mar 28 23:51:17 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* TAO/CIAO/tools/RTComponentServer/Makefile.RTComponentServer:

	  Updated dependencies. 
	
	* TAO/CIAO/tools/RTComponentServer/RTConfig_Manager.h:

	  Removed inclusion of Functor.h.

Mon Mar 29 05:46:58 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* TAO/CIAO/tools/RTComponentServer/Makefile.RTComponentServer:

	  Updated dependencies.
	
	* TAO/CIAO/tools/RTComponentServer/RTConfig_Manager.h:



Tue Mar 23 14:34:06 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantHeaderGenerator.cpp:
        
          Modified code generated by FacetEmitter class to generate
          the _Servant class for a facet in the scope where the IDL
          interface the facet employs is defined, as mandated by the
          CCM spec.

        * CIDLC/ServantSourceGenerator.cpp:
          
          Change generation of the declaration of a local variable 
          which is a _var of the executor class for a facet to match the
          scope of the declaration of the executor class itself, which
          must be, as mentioned above, in the same scope as the declaration
          of the IDL interface used by the facet.
          
          Thanks to Jessica Pistole <Jessica.Pistole@jhuapl.edu> for 
          sending the example IDL/CIDL files that demostrated the
          problem.
         
Tue Mar 16 11:22:44 2004  Venkita Subramonian  <venkita@cs.wustl.edu>
