@@ -1,3 +1,11 @@
+Wed Mar 31 23:03:59 2004  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * CIDLC/ServantHeaderGenerator.cpp:
+        
+          Added code emitter to generate includes of *S.h corresponding to
+          IDL files included in the CIDL file. Thanks to Gary Duzan 
+          <gduzan@bbn.com> for pointing out the problem.
+
 Wed Mar 31 17:59:12 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
  	* tools/static_configurator/Static_Configurator.mpc:
